Bug 489479.  Make nsTableFrame::InsertFrames handle a framelist that includes both colgroups and rowgroups being inserted at the end of the principal child list.  r=bernd, sr=roc